<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_events">New Events</string>
    <string name="upload_event">Upload Event</string>
    <string name="view_event_details">View Event Details</string>
    <string name="event_specific_name">Event specific name</string>
    <string name="event_location">Event_specific_location</string>
    <string name="event_date">Event specific date</string>
    <string name="event_short_description">Event short description</string>
    <string name="event_detailed_description">Event detailed description</string>
    <string name="attend_event">Attend Event</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="click_here">Click Here</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="register">Register</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_have_an_account">Already have an account??</string>
    <string name="login">Login</string>
    <string name="logintop">LOGIN</string>
    <string name="registertop">REGISTER</string>
    <string name="enter_a_detailed_descrition_of_the_event">Enter a detailed descrition of the event</string>
</resources>
