<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorGrayLight"
        tools:context=".ui.activities.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorBurgundy">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@android:color/transparent">

                    <LinearLayout
                        android:layout_width="400dp"
                        android:layout_height="251dp"
                        android:gravity="center"
                        android:background="@drawable/login_pages"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/logo_image"
                            android:layout_width="254dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@drawable/party" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MyApp.Toolbar"
                    android:text="@string/logintop"
                    android:layout_gravity="center"
                    android:gravity="center"/>

            </LinearLayout>


            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_button_orange_text"
                android:drawableLeft="@drawable/ic_cake_black_24dp"
                android:hint="@string/enter_your_username"
                android:padding="5dp"
                android:elevation="10dp"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_button_orange_text"
                android:drawableLeft="@drawable/ic_time"
                android:hint="@string/enter_your_password"
                android:textSize="14sp"
                android:padding="5dp"
                android:elevation="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/colorBurgundy"/>
                <TextView
                    android:id="@+id/login_click_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/click_here"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_login_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/redirect_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an Account?"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/redirect_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Register"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>