<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:background="@color/colorAccent2"
    tools:context=".ui.activities.EventDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorBurgundy">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBurgundy"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/action_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:foregroundGravity="left"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                    android:background="@color/colorBurgundy"
                    />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    style="@style/TextAppearance.MyApp.Toolbar"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/view_event_details"
                    tools:ignore="RtlCompat" />

            </LinearLayout>



        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/content_image"
        android:layout_below="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10sp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_gravity="top"
                        android:scaleType="centerCrop"
                        android:id="@+id/img_event_detail"
                        android:src="@drawable/party">

                    </ImageView>



                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tab_layout"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:tabBackground="@drawable/tab_selector"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="0dp"
                        app:tabMaxWidth="10dp"/>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="8dp"
                        android:layout_marginBottom="50dp"
                        android:background="@color/colorBurgundy" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp">


                        <RatingBar
                            android:id="@+id/rating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:progressTint="#E91E63"

                            android:rating="3"
                            android:stepSize="1.0"
                            tools:ignore="RtlCompat" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            tools:ignore="RtlCompat">

                            <ImageView
                                android:id="@+id/product_add_cart"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginEnd="20dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/ic_present_to_all_black_24dp"
                                tools:ignore="RtlCompat" />


                            <ImageView
                                android:id="@+id/product_add_wishlist"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginEnd="20dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/ic_heart"
                                tools:ignore="RtlCompat" />
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>



            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                tools:ignore="RtlCompat">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/details_cardView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:orientation="vertical"
                            tools:ignore="RtlCompat">

                            <TextView
                                android:id="@+id/ed_eventname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/event_specific_name"
                                android:textAppearance="@style/TextAppearance.MyApp.Emphasis"
                                android:textColor="#E91E63" />


                            <TextView
                                android:id="@+id/ed_eventlocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/event_location"
                                android:textAppearance="@style/TextAppearance.MyApp.Price" />
                            <TextView
                                android:id="@+id/ed_eventdatetime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/event_date"
                                />


                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_attend_event"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="right"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/btn_rounded"
                            android:text="Attend Event"
                            android:textColor="@color/colorWhite"
                            tools:ignore="RtlCompat"></Button>

                    </androidx.cardview.widget.CardView>



                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                tools:ignore="RtlCompat">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/event_short_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/event_short_description"
                            android:textAppearance="@style/TextAppearance.MyApp.Title"
                            android:textColor="#E91E63"
                            tools:ignore="RtlCompat" />


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_margin="8dp"
                            android:layout_marginBottom="50dp"
                            android:background="@color/colorBurgundy" />

                        <TextView
                            android:id="@+id/event_long_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/event_detailed_description"
                            android:textAppearance="@style/TextAppearance.MyApp.Normal"
                            tools:ignore="RtlCompat" />

                        <Button
                            android:id="@+id/btn_share_event"
                            style="@style/TextAppearance.AppCompat.Widget.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="right"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/btn_rounded"
                            android:text="Share Event"
                            android:textColor="@color/colorWhite"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <Button
                android:id="@+id/toggle_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_alignParentEnd="true"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="Description" />
        </LinearLayout>


    </ScrollView>
</RelativeLayout>